# contacts

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/: contactsHandle.h  gloab.h  persion.h  person.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.c
src/model/: CMakeLists.txt  persion.c  person.c
